--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -42,12 +42,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   min-height: 120px;
 }
 .sprite-wrapper img {
-  width: 120px;
-  height: 120px;
+  width: 160px;
+  height: 160px;
   image-rendering: pixelated;
   background: #f7f7f7;
   border-radius: 50%;
