--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -198,3 +198,35 @@ button[type="submit"]:disabled {
   box-shadow: 0 1px 4px 0 rgba(138,43,226,0.07);
   text-transform: uppercase;
 }
+
+.score-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.2rem;
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin-bottom: 1.2rem;
+  color: #6a1b9a;
+  background: #ede7f6;
+  border-radius: 1.5rem;
+  padding: 0.6rem 1.5rem;
+  box-shadow: 0 1px 6px 0 rgba(138,43,226,0.07);
+}
+.score-label {
+  color: #8e24aa;
+  margin-right: 0.3rem;
+}
+.score-value {
+  color: #388e3c;
+  font-size: 1.5rem;
+  margin-right: 0.7rem;
+  font-weight: 900;
+}
+.round-points {
+  color: #333;
+  font-size: 1.1rem;
+  font-weight: 500;
+  margin-left: 0.7rem;
+  opacity: 0.7;
+}
